[package]
name = "greptimedb-ingester"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A rust client for GreptimeDB gRPC protocol"

[dependencies]
dashmap = "5.4"
enum_dispatch = "0.3"
futures = "0.3"
futures-util  = "0.3"
greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", tag = "v0.7.0" }
parking_lot = "0.12"
prost = "0.12"
rand = "0.8"
snafu = "0.7"
tokio = { version = "1", features = ["rt", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip", "zstd"] }
tower = "0.4"
derive_builder = "0.20"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
derive-new = "0.5"
